feat: support load jar from remote url (#333)
Co-authored-by: wildeslam <yushuwang@trip.com>